[project]
name = "touge-analyzer"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "osmnx>=1.9.0",
  "geopandas>=1.0.0",
  "shapely>=2.0.0",
  "fiona>=1.9.0",
  "rasterio>=1.3.0",
  "pyproj>=3.6.0",
  "geopy>=2.4.0",
  "rtree>=1.2.0",
  "networkx>=3.0",
  "numpy>=1.26.0",
  "pandas>=2.0.0",
  "scipy>=1.12.0",
  "matplotlib>=3.8.0",
  "scikit-learn>=1.3.0",
  "sqlalchemy>=2.0.0",
  "psycopg2-binary>=2.9.0",
  "python-dotenv>=1.0.0",
  "tqdm>=4.65.0",
  "elevation>=1.1.0",
]
