[project]
name = "vit-centerline"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
  "torch>=2.0.0",
  "torchvision>=0.15.0",
  "timm>=0.9.0",
  "pillow>=10.0.0",
  "fastapi>=0.100.0",
  "uvicorn>=0.23.0",
  "psycopg2-binary>=2.9.0",
  "pandas>=2.0.0",
  "scikit-learn>=1.3.0",
  "tqdm>=4.65.0",
  "python-dotenv>=1.0.0",
  "requests>=2.31.0",
  "huggingface-hub>=0.20.0",
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
